--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./bootstrap-4.5.3-dist/css/bootstrap.min.css">
+    <title>Document</title>
 </head>
 <body>
-  <main>
     
     <section><br>
-      <div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos molestiae incidunt porro praesentium magni cupiditate quisquam eligendi, blanditiis quis rem asperiores aspernatur ipsam aliquid ipsa autem architecto. Quo debitis ex aliquam ipsum voluptas incidunt aliquid et temporibus? Aspernatur, minima.</p>
-          <a href="#">Read more</a>
-          <!-- <button type="submit">Read more</button> -->
-      </div>
-  </section>
-  <div class="circle" ><a href="#">&uparrow;</a></div>
-</main>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos molestiae incidunt porro praesentium magni cupiditate quisquam eligendi, blanditiis quis rem asperiores aspernatur ipsam aliquid ipsa autem architecto. Quo debitis ex aliquam ipsum voluptas incidunt aliquid et temporibus? Aspernatur, minima.</p>
+            <a href="#">Read more</a>
+            <!-- <button type="submit">Read more</button> -->
+        </div>
+    </section>
+    <div class="circle" ><a href="#">&uparrow;</a></div>
+    <script src="./bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
